--- a/livecodehub/package.json
+++ b/livecodehub/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
+    "auth": "^1.2.3",
     "bcrypt": "^5.1.1",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
@@ -23,12 +24,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "prisma": "^6.1.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
