--- a/livecodehub/package.json
+++ b/livecodehub/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "prisma": "^6.1.0",
+    "sass": "^1.83.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
