--- a/livecodehub/package.json
+++ b/livecodehub/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "auth": "^1.2.3",
     "bcrypt": "^5.1.1",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
